# strictpy

./: LICENSE  README.md  package.py  pyproject.toml
.github/workflows/: pypi-publish.yml  pytest-cov.yml  test-pypi-publish.yml
src/strictpy/: __init__.py  decorator.py  exceptions.py  helpers.py
strictpy/: __init__.py  decorator.py  exceptions.py  helpers.py
tests/: test_helpers.py
